<?xml version="1.0"?>
<package format="3">
  <name>agribot_rl_nav</name>
  <version>0.0.1</version>
  <description>Depth-based imitation local policy for Agribot navigation on ROS 2.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>agribot_autonomy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>noah_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>scout_control</exec_depend>
  <exec_depend>scout_gazebo</exec_depend>
  <exec_depend>scout_navigation</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
