<?xml version="1.0"?>
<package format="3">
  <name>hipnuc_imu</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the HiPNUC N300Pro HI91 binary protocol.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
