<?xml version="1.0"?>
<package format="3">
  <name>scout_base</name>
  <version>0.3.3</version>
  <description>ROS 2 Scout base driver.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>scout_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ugv_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
